[package]
name = "font-rs"
version = "0.0.2"
license = "Apache-2.0"
authors = [ "Raph Levien <raph@google.com>" ]
description = "A font renderer written (mostly) in pure, safe Rust"
repository = "https://github.com/google/font-rs"
build = "build.rs"

[features]
sse = []
nightly-sse = ["simd"]

[dependencies]
simd = { git = "https://github.com/huonw/simd", optional = true }

[build-dependencies]
gcc = "0.3"
